<resources>
    <string name="app_name">Tutor Contact</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_tutor">Ingreso Tutor</string>
    <string name="action_sign_in_estudiante">Ingreso Estudiante</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="carrera">¿De qué carrera es tutor?</string>
    <string name="login">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="horario_disponible">Horarios Disponibles</string>
    <string name="salir">Salir</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="regresar1">Menú Tutor</string>
    <string name="abrirfragment">Abrir</string>
    <string name="cerrarfragment">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
